--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,15 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.hideBlog {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+button:focus,
+button:active {
+  outline: none;
+}
